# docint

./: .gitignore  Cargo.toml  Dockerfile.lambda  README.md  docker-compose.test.yml  queries.json
.github/workflows/: ci.yml  db-operations.yml
agent/: Dockerfile  agent.py  pytest.ini  requirements-dev.txt  requirements.txt  test_agent.py  test_tenant_injector.py
crates/docint-cli/: Cargo.toml  build.rs
crates/docint-cli/src/: auth.rs  main.rs
crates/docint-core/: Cargo.toml
crates/docint-core/src/: chunker.rs  db.rs  embeddings.rs  lambda_init.rs  lib.rs  models.rs  store.rs
crates/docint-core/tests/: store_business_logic_tests.rs  store_rls_tests.rs
crates/docint-core/tests/common/: mod.rs
crates/lambda-compare/: Cargo.toml
crates/lambda-compare/src/: main.rs
crates/lambda-compare/tests/: README.md  common  handler_tests.rs
crates/lambda-ingest/: Cargo.toml
crates/lambda-ingest/src/: main.rs
crates/lambda-ingest/tests/: concurrent_embedding_tests.rs
crates/lambda-metadata/: Cargo.toml
crates/lambda-metadata/src/: main.rs
crates/lambda-metadata/tests/: handler_tests.rs
crates/lambda-search/: Cargo.toml
crates/lambda-search/src/: main.rs
crates/lambda-search/tests/: handler_tests.rs
datasets/: retrieve-only-v1.jsonl
docs/: ADD-USERS.md  FIX-TENANT-INJECTOR.md  INTEGRATION-TEST-SETUP.md  P0-RLS-FIX.md  PRIORITY-ISSUES.md  RAG-EVALUATION.md  SECURITY-FIX-TENANT-ID-INJECTION.md  TEST-COVERAGE-AUDIT.md  TEST-COVERAGE-FINAL.md  TESTING-QUICKSTART.md  TODO-RAG-EVALUATION.md
infrastructure/: app.py  bootstrap_github_oidc.py  cdk.json  setup_transaction_search.py
infrastructure/stacks/: agent_stack.py  auth_stack.py  database_stack.py  evaluation_stack.py  gateway_stack.py  lambda_stack.py  monitoring_stack.py  rag_evaluation_stack.py
local/: podman-compose.yml
local/test-events/: README.md  compare.json  ingest.json  ingest.json.template  metadata.json  search.json  search.json.template
migrations/: 007_add_updated_at.sql  007_add_updated_at_simple.sql  20250101000001_initial_schema.sql  20250101000002_fulltext_search.sql  20250101000003_row_level_security.sql  20250101000004_unique_document_per_tenant.sql  20250101000005_rls_write_policies.sql
scripts/: check_evals.sh  create_rag_eval_dataset.py  init-test-db.sql  load_test.sh  watch_evals.sh
