[package]
name = "docint-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockagentcore = "1"
clap = { version = "4", features = ["derive", "env"] }
