[package]
name = "lambda-search"
version = "0.1.0"
edition.workspace = true

[dependencies]
docint-core = { path = "../docint-core" }
lambda_runtime = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
